@@ -10,6 +10,17 @@
 
 <table>
 <tr>
+<th>2004-06-29</th>
+<td>
+Added more Options to control when some features of the algorthim
+are used, sine it seems that, in particular, the tricks of extending
+Schreier trees and using alternating actions do not always make things
+go faster. Also incorporated some GAP-related improvements due to
+Alexander Hulpke, and a selection of an initial store of base points
+using a strategy of O'Brien and Murray.
+</td>
+</tr>
+<tr>
 <th>2004-06-26</th>
 <td>
     Added an Option to flatten the Schreier trees at creation time (make
